# fks_auth

./: .gitmodules  Cargo.toml  Dockerfile  PASSKEY_CLIENT_EXAMPLE.html  PASSKEY_IMPLEMENTATION.md  PASSKEY_README.md  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  requirements.txt  run.sh  sitecustomize.py  start.sh
.github/: ci.yml
.github/staging/: fks_auth-ci.yml
.github/workflows/: ci.yml  codebase-analysis.yml  compose-aggregate-check.yml  docker-build-push.yml  docker-images-build.yml  fks_auth-ci.yml  monitoring-config-validate.yml  tests.yml
docker/: Dockerfile
docs/: AUTHENTICATION_TEST_RESULTS.md
k8s/: health-checks.yaml
scripts/: init_auth_db.sql
src/: lib.rs  main.rs  passkey.rs  pyproject.toml
src/fks_api/: __init__.py  app.py  fastapi_main.py  main.py
src/fks_api/dependencies/: __init__.py  auth.py  database.py  services.py
src/fks_api/middleware/: __init__.py  auth.py  circuit_breaker.py  cors.py  metrics.py  rate_limit.py  security.py
src/fks_api/routers/: __init__.py  active_assets.py  backtest_v1_stub.py  backtests_simple.py  data_quality.py  data_service.py  dataset.py  docs.py  ollama_proxy.py  optimization.py  signals.py  strategies.py  trading_sessions.py  transformer_ingest.py
src/fks_api/routes/: __init__.py
src/fks_api/routes/monitoring/: __init__.py  models.py  routes.py  setup.py
src/fks_api/routes/v1/: __init__.py  admin.py  analyze_endpoints.py  auth.py  background_tasks.py  backtest.py  backtesting.py  command_routes.py  data.py  dataset.py  fetch_endpoints.py  health.py  job_endpoints.py  job_manager.py  market_data.py  orders.py  pipeline_endpoints.py  positions.py  report_endpoints.py  sentiment.py  status.py  strategies.py  strategy.py  trading.py  training.py  visualization.py  visualize_endpoints.py  watcher.py
src/fks_api/routes/v2/: __init__.py
src/fks_api/services/: data_service.py
src/tests/: test_health.py
tests/: auth_integration.rs  integration.rs  test_shared_import.py
