[project]
name = "fks_api"
version = "0.1.0"
description = "FKS Trading API service (extracted)"
authors = [ { name = "FKS" } ]
## Normalized author contact (internal distribution list)
## Retained separate from tool.poetry style used elsewhere; aligns with PEP 621 schema.
authors = ["FKS <nunie.smith01@gmail.com>"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

# Keep dependency surface minimal; add as features when needed
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",         # used for background model pulls
  "requests",      # discord proxy
  "orjson",        # faster json
  "pydantic>=2",
  # "shared_python @ file://../../../shared/shared_python",  # removed (shared decoupled)
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fks_api*"]

[tool.setuptools.package-data]
fks_api = ["**/*.py"]

[project.optional-dependencies]
websocket = ["websockets", "python-socketio"]
security = ["python-jose[cryptography]", "passlib[bcrypt]", "python-multipart"]

[project.scripts]
fks_api = "fks_api.fastapi_main:app"

[tool.uvicorn]
factory = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

